--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <% if signed_in? %>
   <%= current_user.username %>
+  <%= link_to "User Page", user_url(current_user) %>
   <%= button_to "Sign Out", session_url, :method => :delete %>
   <% else %>
   <%= link_to "Sign In", new_session_url %>
