--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,4 +1,5 @@
-<h2> Available Location </h2>
+<h2> Available Locations </h2>
+<%= render "layouts/errors" %>
 
 <ul>
   <% @locations.each do |location| %>
