--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -2,7 +2,7 @@
 <% action = (location.persisted? ? location_url(location) : locations_url) %>
 <% method = (location.persisted? ? :patch : :post) %>
 
-<h2> Add your campsite! </h2>
+
 
 <form id="form_id" action="<%= action %>" method="post">
   <input type="hidden" name="_method" value="<%= method %>">
@@ -15,13 +15,18 @@
   <br><br>
 
   <label for="location_camptype"> Type of Camping <br>
-    <input
+    <label><input
       type="radio"
       name="location[camptype]"
       value="wild"
       <%= location.camptype == "wild" ? "checked" : "" %>>
-      Wilderness <br>
-    <input type="radio" name="location[camptype]" value="drive" <%= location.camptype == "drive" ? "checked" : "" %> > Drive-In
+      Wilderness</label> <br>
+    <label><input
+      type="radio"
+      name="location[camptype]"
+      value="drive"
+      <%= location.camptype == "drive" ? "checked" : "" %> >
+      Drive-In </label>
   </label>
 
   <br><br>
@@ -30,7 +35,9 @@
     <input type="number" name="location[max_occupancy]" value="<%= location.max_occupancy %>">
   </label>
 
-  <label for="location_price">Price per Night <br>
+  <br><br>
+
+  <label for="location_price">Price per Night
     <!-- <input type="range" name="location[price]" value="<%= location.price %>" data-show-value="true" min="0" max="100" > -->
     <input type="number" name="location[price]" value="<%=location.price%>">
   </label>
