--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,2 +1,10 @@
+
 <%= render "layouts/errors" %>
+
+<h2> Add your campsite! </h2>
+
 <%= render "form", location: @location %>
+
+<br>
+ 
+<a href="<%= locations_url %>"> Back to Listing </a>
