--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,21 +2,39 @@
 <html>
 <head>
   <title>Air</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+  <header class="header">
+    <nav class="header-nav group">
 
-  <% if signed_in? %>
-  <%= current_user.username %>
-  <%= link_to "User Page", user_url(current_user) %>
-  <%= button_to "Sign Out", session_url, :method => :delete %>
-  <% else %>
-  <%= link_to "Sign In", new_session_url %>
-  <%= link_to "Sign Up", new_user_url %>
-  <% end %>
+      <h2 class="header-logo">SleepingBnT</h2>
+      <ul class="header-navlist">
+      <% if signed_in? %>
+        <li><%= link_to current_user.username, user_url(current_user) %></li>
+        <li>
+          <form action="<%=session_url %>" method="post">
+            <input type="hidden" name="_method" value="DELETE">
+            <input
+            type="hidden"
+            name="authenticity_token"
+            value="<%=form_authenticity_token%>">
+            <button name="Sign out">Sign Out</button>
+          </form>
+        </li>
+        <li><%= link_to "Add Your Camp", "#/locations/new" %></li>
+      <% else %>
+        <li><%= link_to "Sign In", new_session_url %></li>
+        <li><%= link_to "Sign Up", new_user_url %></li>
+      <% end %>
+
+      </ul>
+
+    </nav>
+  </header>
 
 <%= yield %>
 
