--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <header class="header">
     <nav class="header-nav group">
 
-      <h2 class="header-logo">SleepingBnT</h2>
+      <h2 class="header-logo"><a href="">SleepingBnT</a></h2>
       <ul class="header-navlist">
       <% if signed_in? %>
         <li><%= link_to current_user.username, user_url(current_user) %></li>
