--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <% id = current_user.id %>
 </head>
 <body>
 
@@ -15,7 +14,7 @@
       <h2 class="header-logo"><a href="#">SleepingBnT</a></h2>
       <ul class="header-navlist">
       <% if signed_in? %>
-        <li><a href="#/users/<%=id%>"><%=current_user.username%></a></li>
+        <li><a href="#/users/<%=current_user.id%>"><%=current_user.username%></a></li>
 
 
         <li>
