--- a/app/assets/templates/requests/index.jst.ejs
+++ b/app/assets/templates/requests/index.jst.ejs
@@ -9,11 +9,11 @@
   </tr>
   <% location.requests().each( function (request) {  %>
     <tr>
-      <td><%=User.find(request.requester_id).escape("username") %> </td>
+      <td><%=User.getOrFetch(request.get("requester_id")).escape("username") %> </td>
       <td><%=request.escape("start_date")%></td>
       <td><%=request.escape("end_date")%></td>
       <td>
-        <% if (request.status === "PENDING"){  %>
+        <% if (request.escape("status") === "PENDING"){  %>
           <button class="approve">Approve</button>
           <button class="deny">Deny</button>
         <%} else {%>
