--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -4,7 +4,7 @@
 <ul>
   <% user.locations().each(function (location){  %>
 
-    <li><a href="#/locations/<%=location.id%>"> <%= location.escape("name") %></a> </li>
+    <li><a href="#/locations/<%=location.id%>"> <%= location.escape("name") %></a> <p><a href="#/locations/<%=location.id%>/requests">Requests</a></p>  </li>
 
   <% }); %>
 </ul>
