--- a/app/assets/templates/requests/index.jst.ejs
+++ b/app/assets/templates/requests/index.jst.ejs
@@ -17,8 +17,8 @@
         <td><%=request.escape("end_date")%></td>
         <td>
           <% if (request.escape("status") === "PENDING"){  %>
-            <button class="approve"  data-id="<%=location.id%>">Approve</button>
-            <button class="deny" data-id="<%=location.id%>">Deny</button>
+            <button class="approve"  data-id="<%=request.id%>">Approve</button>
+            <button class="deny" data-id="<%=request.id%>">Deny</button>
           <% } else { %>
             <%= request.escape("status") %>
           <% } %>
