added map to front page

--- a/app/assets/templates/locations/index.jst.ejs
+++ b/app/assets/templates/locations/index.jst.ejs
@@ -1,7 +1,13 @@
 
 <div class="content group">
+
   <section class="index-map">
-    <h2> There should be a nice big map here </h2>
+  adfsdf
+    <div id='map-one' class='map'> </div>
+<script>
+L.mapbox.accessToken = 'pk.eyJ1Ijoicmpvb2J5IiwiYSI6IjU1VlpHSncifQ.s94ec3J04a7nUvuB7GrlNQ';
+L.mapbox.map('map-one', 'examples.map-i86l3621');
+</script>
   </section>
 
   <section class="index-listings">
