--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -3,34 +3,29 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .index-map {
+  position: relative;
   float: left;
-  width: 40%;
-  min-height: 700px;
+  width: 45%;
+  height: auto;
 
+}
+
+.map {
+  position: absolute;
+  width: 100%;
+  height: 1100px;
+  top: 0;
 }
 
 .index-listings {
   float: left;
-  display: block;
-  width: 60%;
-  min-height: 700px;
+  width: 55%;
 }
 
 .content {
-  padding: 40px;
+
 }
 
 .content {
   position: relative;
-}
-
-.content:before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 40%;
-  width: 1px;
-  background: #ccc;
 }
