--- a/app/assets/templates/locations/index.jst.ejs
+++ b/app/assets/templates/locations/index.jst.ejs
@@ -6,7 +6,7 @@
     <div id='map-one' class='map'> </div>
 <script>
 L.mapbox.accessToken = 'pk.eyJ1Ijoicmpvb2J5IiwiYSI6IjU1VlpHSncifQ.s94ec3J04a7nUvuB7GrlNQ';
-L.mapbox.map('map-one', 'examples.map-i86l3621');
+L.mapbox.map('map-one', 'rjooby.kodi76mc');
 </script>
   </section>
 
