started maps on show page

--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -29,3 +29,18 @@
 .content {
   position: relative;
 }
+
+section.showmap{
+  position: relative;
+  float: right;
+  width: 300px;
+  height: auto;
+  margin: 0 100px;
+}
+
+.map-show {
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  top: 0;
+}
