--- a/app/assets/templates/locations/show.jst.ejs
+++ b/app/assets/templates/locations/show.jst.ejs
@@ -36,29 +36,25 @@
   <% console.log(location); %>
   <script>
   var map = L.mapbox.map('map-show', 'rjooby.kodi76mc');
-  <% console.log(location.escape("longitude")); %>
-  map.setView([<%=location.escape("latitude")%>, <%=location.escape("longitude")%>], 15);
+  map.setView([<%=location.escape("latitude")%>, <%=location.escape("longitude")%>], 13);
 
   L.mapbox.featureLayer({
-    // this feature is in the GeoJSON format: see geojson.org
-    // for the full specification
     type: 'Feature',
     geometry: {
       type: 'Point',
-      // coordinates here are in longitude, latitude order because
-      // x, y is the standard for GeoJSON and many formats
       coordinates: [
-      -77.03221142292,
-      38.913371603574
+      <%=location.escape("longitude")%>,
+      <%=location.escape("latitude")%>
       ]
     },
     properties: {
-      title: 'Peregrine Espresso',
-      description: '1718 14th St NW, Washington, DC',
+      title: '<%=location.escape("name") %>',
+      description: '<%=location.escape("description")%>',
       'marker-size': 'large',
-      'marker-color': '#BE9A6B',
-      'marker-symbol': 'cafe'
+      'marker-color': '#00A1D6',
+      'marker-symbol': 'campsite'
     }
+  }).addTo(map);
 
 
   </script>
