--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,4 +1,19 @@
 
+<form>
+
+  <label>
+    <h4> Change Your Avatar </h4>
+    <input type="file" name="user[avatar]" id="input-url-avatar">
+  </label>
+  <input type="submit">
+</form>
+
+<br>
+
+<img src="" width="50" id="preview-user-avatar">
+
+<br>
+
 <h3> Your posted locations </h3>
 
 <ul>
