--- a/app/assets/templates/locations/show.jst.ejs
+++ b/app/assets/templates/locations/show.jst.ejs
@@ -21,11 +21,11 @@
 </p>
 
 <p>
-  Water?: <%= location.escape("water") ? "yes" : "no" %>
+  Water?: <%= location.get("water") ? "yes" : "no" %>
 </p>
 
 <p>
-  Bathroom?: <%= location.escape("bathroom") ? "yes" : "no" %>
+  Bathroom?: <%= location.get("bathroom") ? "yes" : "no" %>
 </p>
 
 <br>
