added updates to location

--- a/app/assets/templates/locations/form.jst.ejs
+++ b/app/assets/templates/locations/form.jst.ejs
@@ -66,7 +66,7 @@
     <input type="file" name="location[photo]" id="input-url-photo">
   </label>
 
-  <img src="" id="preview-location-photo" width="200" />
+  <img src="<%= location.escape("photo_url") %>" id="preview-location-photo" width="200" />
 
   <br><br>
 
