--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -18,13 +18,10 @@
 }
 
 .index-listings {
-  float: left;
+  float: right;
   width: 55%;
 }
 
-.content {
-
-}
 
 .content {
   position: relative;
