finshes backbone auth

--- a/app/assets/templates/shared/sign_in.jst.ejs
+++ b/app/assets/templates/shared/sign_in.jst.ejs
@@ -3,8 +3,8 @@
 <form>
 
   <label>
-    Email
-    <input type="email" name="user[email]">
+    Username
+    <input type="text" name="user[username]">
   </label>
 
   <br>
