--- a/app/assets/templates/users/form.jst.ejs
+++ b/app/assets/templates/users/form.jst.ejs
@@ -20,8 +20,8 @@
   <br>
 
   <label>
-    Email
-    <input type="email" name="user[email]"
+    Username
+    <input type="text" name="user[username]"
            value="<%= user.escape("email") %>">
   </label>
 
