--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,16 @@
+<header id="header"></header>
 <div id='content'><div>
 
-<script></script>
+<script>
+
+$(document).ready(function(){
+  // Air.CurrentLocation = {
+  //   longitude: <%#= current_location[:latitude] %>,
+  //   latitude: <%#= current_location[:longitude] %>
+  // }
+  console.log("HEY");
+
+  Air.initialize();
+});
+
+</script>
