--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -2,18 +2,28 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.index-map {
+.content {
   position: relative;
+  height: 100%;
+}
+
+.main {
+  height: calc(100%);
+}
+
+.index-map {
+  // display: block;
+  position: absolute;
+
   float: left;
   width: 45%;
-  height: auto;
-
+  height: calc(100% - 36px);
 }
 
 .map {
   position: absolute;
   width: 100%;
-  height: 950px;
+  height: 100%;
   top: 0;
 }
 
@@ -22,9 +32,17 @@
   width: 55%;
 }
 
+#locations-list > li {
+  padding: 15px;
+  width: 420px;
+  float: left;
+}
 
-.content {
-  position: relative;
+a.listing {
+  display: block;
+  border: 1px solid black;
+
+
 }
 
 section.showmap{
