--- a/app/assets/templates/locations/index.jst.ejs
+++ b/app/assets/templates/locations/index.jst.ejs
@@ -5,7 +5,8 @@
 
   <section class="index-listings">
     <main class="index-listing-form">
-      <form class="search">
+      <!-- <form class="search">
+        <input type="text" class="query">
         <label for=""> Where?
           <select name="where">
             <option value="NYC"> New York </option>
@@ -16,12 +17,12 @@
 
         </label>
 
-        <label>When?</label>
+         <label>When?</label>
         <input type="date" name="start" value="">
         to
         <input type="date" name="end" value="">
         <input type="submit" value="submit">
-      </form>
+      </form> -->
 
     </main>
     <main class="index-listing-locations">
