finishes search function on index

--- a/app/assets/templates/locations/index.jst.ejs
+++ b/app/assets/templates/locations/index.jst.ejs
@@ -5,9 +5,9 @@
 
   <section class="index-listings">
     <main class="index-listing-form">
-      <!-- <form class="search">
-        <input type="text" class="query">
-        <label for=""> Where?
+      <!-- <form class="search"> -->
+        <input type="text" class="query" value="<%= locations._query %>">
+        <!-- <label for=""> Where?
           <select name="where">
             <option value="NYC"> New York </option>
             <option value="SF"> San Francisco </option>
@@ -20,9 +20,9 @@
          <label>When?</label>
         <input type="date" name="start" value="">
         to
-        <input type="date" name="end" value="">
-        <input type="submit" value="submit">
-      </form> -->
+        <input type="date" name="end" value=""> -->
+        <input type="submit" class="submit">
+      <!-- </form> -->
 
     </main>
     <main class="index-listing-locations">
